# zuse

./: .gitignore  README.md  install.sh  pyproject.toml  readme.txt
docs/: 3d_agent_animation_interaction_concept.md  agent_status_api.md  intent_command_analysis.md  testplan_befehlsverarbeitung.md
macos/ZuseApp/: Info.plist.template  Makefile  Package.resolved  Package.swift  build-app.sh
macos/ZuseApp/Sources/Zuse/: AppState.swift  BackendClient.swift  BackendProcess.swift  Models.swift  SSEClient.swift  Theme.swift  ZuseAppMain.swift
macos/ZuseApp/Sources/Zuse/Views/: ChatView.swift  ContentView.swift  CrewDashboardView.swift  EditorViews.swift
tests/: test_agentpool.py  test_cli.py  test_cli_webgui.py  test_config.py  test_costs.py  test_crew.py  test_doctor.py  test_dream.py  test_filesystem_tools.py  test_journal.py  test_knowledge.py  test_permissions.py  test_providers.py  test_quiet.py  test_ratelimit.py  test_safety.py  test_selftest.py  test_session.py  test_shell.py  test_telegram.py  test_terminal_ui.py  test_ui.py  test_whatsapp.py
zuse/: __init__.py  __main__.py  agent.py  agentpool.py  browser.py  cli.py  config.py  costs.py  dream.py  embeddings.py  gui.py  journal.py  knowledge.py  mcp.py  openai_auth.py  permissions.py  safety.py  session.py  setup.py  shell.py  telegram.py  ui.py  webui.py  whatsapp.py
zuse/providers/: __init__.py  anthropic_backend.py  base.py  codex_backend.py  ollama_backend.py  openai_backend.py
zuse/tools/: __init__.py  base.py  browser.py  code.py  computer.py  filesystem.py  mac.py  mcp_tools.py  productivity.py  shell.py  subagent.py
