[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zuse-agent"
version = "0.1.0"
description = "Zuse — an autonomous terminal AI agent powered by Claude"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Niklas" }]
keywords = ["ai", "agent", "claude", "anthropic", "cli", "autonomous"]
dependencies = [
    "anthropic>=0.69",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
]

[project.scripts]
zuse = "zuse.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
# macOS mouse/keyboard control (computer use). Install with: pip install -e ".[mac]"
mac = ["pyobjc-framework-Quartz>=10.0"]
# Browser automation. After install run: python -m playwright install chromium
browser = ["playwright>=1.40"]

[tool.setuptools.packages.find]
include = ["zuse*"]

[tool.ruff]
line-length = 100
target-version = "py310"
